<resources>
    <string name="app_name">SubiAppAndroid</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="titulo">Subi Esthetics</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="registrarse">Crear Cuenta</string>
    <string name="introduceEmail">Introduce tu Email</string>
    <string name="introduceContraseña">Introduce tu contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="introduceUsuario">Introduce tu Usuario</string>
    <string name="recordarContraseña">Recordar datos</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="introduceFechaNacimiento">Introduce tu Nacimiento</string>
    <string name="rellenarEmailNecesario">Tienes que rellenar el email</string>
    <string name="rellenarUsuarioNecesario">Tienes que rellenar el usuario</string>
    <string name="rellenarFechaNecesario">Tienes que rellenar la fecha</string>
    <string name="rellenarPasswordNecesario">Tienes que rellenar la contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="sesionInciada">Sesion iniciada correctamente</string>
    <string name="registrarmeAhora">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="iniciarSesionAhora">¿Ya tienes cuenta? Iniciar Sesión</string>
    <string name="contraseñaOlvidada">¿Has olvidado tu contraseña? Recupérala</string>
    <string name="tienesQueSerMayorEdad">Tienes que ser mayor de edad</string>
    <string name="almacenamientoInterno">Almacenamiento Interno</string>
    <string name="almacenamientoExternoPrivado">Almacenamiento Externo Privado</string>
    <string name="almacenamientoExternoPublico">Almacenamiento Externo Público</string>
    <string name="notificaciones">Si quieres notificaciones activame en ajustes</string>
    <string name="prefs_file">com.asencio.animeview.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_sidebar">SidebarActivity</string>
    <string name="cambiosAplicados">Cambios aplicados con éxito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="animeVisto">Visto</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Aplicar">Aplicar Cambios</string>
    <string name="modoOscuro">Modo Oscuro</string>
    <string name="rellenarEmail">Tienes que rellenar el email</string>
    <string name="errorVideo">Error cargando el video</string>
    <string name="rellenarUsuario">Tienes que rellenar el nombre</string>
    <string name="rellenarApellidos">Tienes que rellenar los apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="rellenarFecha">Tienes que rellenar la fecha</string>
    <string name="necesitoPermisos">Necesito que me concedas Permisos</string>
    <string name="inicioSesionExitoso">Has iniciado sesion con exito</string>
    <string name="bienvenidoDeNuevo">Bienvenido a AnimeView</string>
    <string name="haIniciadoSesion">ha iniciado sesion</string>
    <string name="rellenarPassword">Tienes que rellenar la contraseña</string>
    <string name="rellenarTelefono">Tienes que introducir un teléfono</string>

</resources>