<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beigeSubi"
    tools:context=".pantallas.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/fontsfree_net_harpagan_regular"
            android:text="SUBI"
            android:textAlignment="center"
            android:textColor="@color/beigeMarron"
            android:textSize="70dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/beigeMarron"
                android:textSize="15dp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/emailIntroducir"
                style="@style/barra_contenido"
                android:hint=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="34dp" />

            <TextView
                android:id="@+id/contraseñaTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contraseña"
                android:textColor="@color/beigeMarron"
                android:textSize="15dp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/contraseñaIntroducir"
                style="@style/barra_contenido"
                android:hint=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="48dp"/>

            <CheckBox
                android:id="@+id/recordarDatos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recordarContraseña"
                android:textColor="@color/beigeMarron"
                android:theme="@style/recordar_contraseña" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cerdocute_removebg_preview" />

            <Button
                android:id="@+id/botonLoginInicio"
                style="@style/botonesInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciarSesion" />

            <TextView
                android:id="@+id/textoRecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/beigeMarron"
                android:textAlignment="center"
                android:text="@string/contraseñaOlvidada" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp"
        >

        <TextView
            android:id="@+id/textoRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarmeAhora"
            android:textColor="@color/beigeMarron"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>